--- a/chatbot-backend/.env.example
+++ b/chatbot-backend/.env.example
@@ -2,3 +2,15 @@ FLASK_ENV=
 SECRET_KEY=
 DATABASE_URL=
 OPENAI_API_KEY=
+
+
+
+
+# Email Configuration for forget password system
+MAIL_SERVER=
+MAIL_PORT=
+MAIL_USE_TLS=
+MAIL_USE_SSL=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_DEFAULT_SENDER=
